<resources>
    <string name="app_name">Calculator</string>
    <string name="theNums">0</string>
    <string name="AC">ac</string>
    <string name="Modulo">%</string>
    <string name="Plusminus">+/-</string>
    <string name="divIt">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="X">X</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="Plus">+</string>
    <string name="dot">.</string>
    <string name="Result">=</string>
</resources>